<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_nom"
        android:layout_marginTop="110dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toTopOf="parent
"       app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="text"
        android:ems="10"
        android:hint="@string/nom_itineraire"
        android:inputType="text"
        android:singleLine="true"
        android:text=""
        app:layout_constraintEnd_toStartOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/sauve"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toEndOf="@id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_file"
        android:layout_marginTop="48dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="24dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/nom_gpx"
        android:layout_marginTop="16dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_height="2dp"
        android:layout_width="330dp"
        android:background="@color/bleu_clair"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/envoi_mail"
        android:layout_marginTop="80dp"
        android:layout_marginStart="56dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Oui"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toEndOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appli_carto"
        android:layout_marginTop="60dp"
        android:layout_marginStart="36dp"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Oui"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintStart_toEndOf="@id/textView6"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>