<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/un_trajet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/item_list_background"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/iphi_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/iphigenie"
        android:src="@mipmap/iphi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/un_trajet" />

    <ImageButton
        android:id="@+id/email_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/email"
        android:src="@drawable/mail_bleu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iphi_button"
        app:layout_constraintTop_toTopOf="@id/iphi_button" />

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_action_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/email_button"
        app:layout_constraintTop_toTopOf="@id/iphi_button" />

</androidx.constraintlayout.widget.ConstraintLayout>