<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/alti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text= "@string/alti"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toStartOf="@id/heure"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/real_time"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/alti"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:text="@string/ta_position"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heure" />

    <TextView
        android:id="@+id/coordonnees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/loc"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/position" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy"
        android:textSize="17sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/coordonnees" />

<!--    <Button
        android:id="@+id/bouton_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="2dp"
        android:text="@string/start"
        app:materialThemeOverlay="@style/ThemeOverlay.App.PrimarySecondary"
        app:layout_constraintEnd_toStartOf="@id/bouton_pause"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bouton_save" />

    <Button
        android:id="@+id/bouton_pause"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/pause"
        app:layout_constraintEnd_toStartOf="@id/bouton_resume"
        app:layout_constraintStart_toEndOf="@id/bouton_start"
        app:layout_constraintBottom_toTopOf="@id/bouton_save"
        app:materialThemeOverlay="@style/ThemeOverlay.App.PrimarySecondary" />

    <Button
        android:id="@+id/bouton_resume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/resume"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bouton_pause"
        app:layout_constraintBottom_toTopOf="@id/bouton_save"
        app:materialThemeOverlay="@style/ThemeOverlay.App.PrimarySecondary" />

    <Button
        android:id="@+id/bouton_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="17dp"
        android:text="@string/save"
        app:materialThemeOverlay="@style/ThemeOverlay.App.PrimarySecondary"
        app:layout_constraintEnd_toStartOf="@id/bouton_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/bouton_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="34dp"
        android:text="@string/cancel"
        app:materialThemeOverlay="@style/ThemeOverlay.App.PrimarySecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bouton_save"
        app:layout_constraintBottom_toBottomOf="parent" />  -->

</androidx.constraintlayout.widget.ConstraintLayout>