<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ChoixApplis"
        tools:showIn="@layout/activity_kparameters">

        <TextView
            android:id="@+id/titleprefs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal"
            android:text="@string/title_prefs"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/choixfrequ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/pref_interval"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleprefs" />

        <RadioGroup
            android:id="@+id/groupfreq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/deux"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choixfrequ" >
            <RadioButton
                android:id="@+id/deux"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                />
            <RadioButton
                android:id="@+id/cinq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                />
            <RadioButton
                android:id="@+id/dix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/choixfiltre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:text="@string/pref_filtre"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/groupfreq" />

        <RadioGroup
            android:id="@+id/groupfiltre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/z1"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choixfiltre" >
            <RadioButton
                android:id="@+id/z1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                />
            <RadioButton
                android:id="@+id/z3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                />
            <RadioButton
                android:id="@+id/z5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                />
            <RadioButton
                android:id="@+id/z7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                />
        </RadioGroup>

        <Button
            android:id="@+id/buttonfin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="OK"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/groupfiltre" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
